This is the C SDK for EdgeX. It is based largely on the Go SDK but the API
differs as follows:

* Adding devices in the "discovery" callback is done using an API function call
  rather than directly returning the new devices.
* Asynchronous device readings are submitted using an API function call rather
  than Go's "channel" facility.
* The API for adding, removing and updating Device Profiles is NYI.

Changes for 1.0.0:

- Device service now follows the new/start/stop/free lifecycle pattern.
- Initial support for configuration changes without restarting.
- Support Correlation IDs. This introduces a requirement for libUUID.
- The API for Event generation other than via device GET requests is split out
  into a seperate header edgex/eventgen.h
- Added support for Automatic Events.
- The API for managing devices and profiles is split out into a seperate header
  edgex/device-mgmt.h
- The device name is passed to the Get and Set handlers. The commandrequest
  structure is simplified.
- Example implementation includes setting service name and registry location
  from the command line and environment.
- Float data is marshalled as base64 unless specified otherwise in the
  floatEncoding field of the device profile.
- Schedules and ScheduleEvents are removed.
- The get and set handlers now take an edgex_protocols object rather than an
  edgex_addressable.
- The device endpoint can be used to access either resources or deviceResources.
  The commands section of a device profile is not used.
- Endpoints for other EdgeX microservices are obtained from the registry (if
  enabled) rather than configuration.
- Metadata for individual devices can be obtained in the device management API.
- The edgex_deviceobject type is renamed to edgex_deviceresource to reflect its
  naming in the profile definition.
- The registry service is now identified by a URL, eg "consul://localhost:8500".
  - Support for consul as the registry service is built-in, but other