@@ -7,4 +7,3 @@ Discovery - Implement ProvisionWatchers.
 
 Threadpool - Configure number of threads.
 
-Provide device profile management API.
